[feature]Java注释优化
Signed-off-by: Weasley <1432689025@qq.com>